gccida/c3/k6_store_unit_conflict_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25676:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 25384, "k6_store_unit_conflict_cost"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25676:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 25384, "k6_store_unit_conflict_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25687:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !symbolic_operand( recog_data_0.operand[1], SImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25704:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !symbolic_operand( recog_data_0.operand[1], DImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25723:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25730:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 2 || pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25737:49: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                                                ^~~~~~~~~~~~
                                                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25781:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 1 || const0_operand( recog_data_0.operand[2], DImode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/insn-attrtab.c:25792:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative != 1 || const0_operand( recog_data_0.operand[2], SImode) ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_store_unit_conflict_cost/src/obj/insn-attrtab.o] Error 1
